--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ Veuillez noter que cet exemple est basé sur des informations générales et qu'
         <li>Élaboration du dossier de plans</li>
         <li>Métrés détaillés des ouvrages</li>
         <li>Assistance au Maître de l'Ouvrage pour la passation des contrats de travaux</li>
-        <!-- Autres services... -->
+        <!-- Autres services..... -->
       </ul>
     </section>
     <section id="projet">
