--- a/indexV4.html
+++ b/indexV4.html
@@ -65,7 +65,7 @@
   </section>
   
   <footer>
-    <p>&copy; 2023 ICGB - Ingénieur Conseil Gilles Bredusse. Tous droits réservés.</p>
+    <p>&copy; 2023 ICGB - Ingénieur Conseil Gilles Bredusse. Tous droits réservés. Version 4</p>
   </footer>
   <!-- Annotation Version 4... -->
 </body>
